# VisionTrack

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test.py
docs/: math_derivation.md
src/: calibration.py  config.py  detector.py  export.py  physics.py  tracker.py  utils.py  video_processor.py  visualization.py
