[project]
name = "vision-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fpdf2==2.7.9",
    "matplotlib==3.9.0",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scipy==1.13.1",
    "streamlit==1.37.0",
    "ultralytics==8.2.103",
]
